gcc/testsuite/gcc.dg/opts-6.c
/* Missing option arguments take precedence over wrong-language
   warnings.  */
/* { dg-do compile } */
/* { dg-options "-ftemplate-depth=" } */

/* { dg-error "missing argument" "" { target *-*-* } 0 } */
